--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="inline">
             <img src="./images/image-avatar.png" alt="" />
             <div class="font">
-              Creation of <a href="#jules wyvern"> Jules Wyvern</a>
+              Creation of <a href="#jules_wyvern"> Jules Wyvern</a>
             </div>
           </div>
         </div>
